# LoomProxy

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  confMagr.py  pyproject.toml
.github/workflows/: ci.yml
.trae/skills/impeccable/: SKILL.md
.trae/skills/impeccable/reference/: hooks.md  live.md  new-work.md  polish.md
base/: __init__.py  base.py  chapterBase.py  contentBase.py  detailBase.py  exploreBase.py  searchBase.py
data/fq/: sytjs.json
data/uxx/: sytjs.json
handlers/: __init__.py  datafiles.py  datasource.py
handlers/base/: base.py  chapterBase.py  contentBase.py  detailBase.py  exploreBase.py  searchBase.py
handlers/fq_xinghai/: __init__.py  chapter.py  content.py  detail.py  explore.py  search.py
handlers/jingluo/: chapter.py  content.py  detail.py  search.py
handlers/luomu/: __init__.py  chapter.py  content.py  detail.py  search.py
handlers/mufan/: api.md  chapter.py  content.py  detail.py  explore.py  search.py
handlers/qm_luomu/: chapter.py  content.py  detail.py  search.py
handlers/qq_luomu/: chapter.py  content.py  detail.py  search.py
handlers/sq_luomu/: chapter.py  content.py  detail.py  search.py
handlers/tutu/: API.md  API_zh.md  bookDetail.txt  chapter.py  content.py  detail.py  explore.py  search.py
handlers/uxx/: __init__.py  chapter.py  content.py  detail.py  explore.py  search.py  utils.py
tests/: test_handlers.py
utils/: auth.py  cache.py  fq_utils.py  network.py  uxx_utils.py
utils/fq_data/: fq_categorys.json  fq_moduleMap.json
